fix image widths on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 }
 
 html, body {
+  margin-top: 20px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
 }
